--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
+        <meta-data
+            android:name="com.google.android.libraries.places.API_KEY"
+            android:value="${PLACES_API_KEY}" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
